--- a/src/DynamoDB.Playground.API/DynamoDB.Playground.API.csproj
+++ b/src/DynamoDB.Playground.API/DynamoDB.Playground.API.csproj
@@ -5,12 +5,19 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="AWSSDK.Core" Version="3.7.400.13" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.400.13" />
     <PackageReference Include="AWSSDK.Extensions.NETCore.Setup" Version="3.7.301" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
   </ItemGroup>
 
 </Project>
